--- a/src/App.scss
+++ b/src/App.scss
@@ -11,15 +11,29 @@ body,
 
 header {
   flex: 0 0 auto;
-  background-color: rgb(0, 124, 128);
 }
 
 main {
+  display: flex;
+  justify-content: center;
   flex: 1 0 auto;
-  background-color: grey;
 }
 
 footer {
-  background-color: tan;
   flex: 0 0 auto;
+}
+
+.list::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #ffffff;
+}
+
+.list::-webkit-scrollbar {
+  width: 10px;
+  background-color: #000000;
+}
+
+.list::-webkit-scrollbar-thumb {
+  background-color: #c9c9c9;
+  border: 2px solid #c9c9c9;
 }
