--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -1,17 +1,35 @@
 @import '../../colors.scss';
 
-.navigation {
+.top-header {
   display: flex;
   justify-content: space-between;
   padding: 20px;
   height: 50px;
-}
-
-.nav-bar {
-  width: 400px;
-  background-color: $nav-bar;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 10px;
+  & .navigation {
+    display: flex;
+    & .nav-bar {
+      width: 400px;
+      background-color: $nav-bar;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 10px;
+    }
+    & .link-home {
+      text-transform: uppercase;
+      text-decoration: none;
+      background-color: #ffffff80;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 100px;
+      border-radius: 10px;
+      color: #000;
+      transition: 0.3s;
+      margin-left: 10px;
+      &:hover {
+        background-color: #fff;
+      }
+    }
+  }
 }
