--- a/src/containers/Profile/Profile.scss
+++ b/src/containers/Profile/Profile.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: center;
   box-shadow: 1px 5px 20px 0px #00000047;
-  margin: 30px 0;
+  margin: 30px 20px;
   padding: 20px;
   box-sizing: border-box;
   & .avatar {
@@ -13,6 +13,7 @@
     overflow: hidden;
   }
   & .contacts {
+    padding-left: 0;
     & li {
       list-style: none;
       border-bottom: 1px solid;
