--- a/src/App.scss
+++ b/src/App.scss
@@ -17,6 +17,9 @@ main {
   display: flex;
   justify-content: center;
   flex: 1 0 auto;
+  &.main-container {
+    margin: 30px 20px;
+  }
 }
 
 footer {
