--- a/src/components/Logo/Logo.scss
+++ b/src/components/Logo/Logo.scss
@@ -1,13 +1,20 @@
 @import '../../colors.scss';
 
 .logo {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   min-width: 100px;
   max-width: 100px;
   background: $logo;
   border-radius: 10px;
   overflow: hidden;
   margin-right: 10px;
+  & a {
+    text-decoration: none;
+    color: #fff;
+    display: block;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
